Убрано часть Варнингов на чистоту кода.